# tmoBot

./: README.md  project_plan
document/: development_log  development_log.md
firmware/stm32-blinky/: CMakeLists.txt  CMakePresets.json  project-description.json  stm32f446xe_flash.ld
firmware/stm32-blinky/Src/: startup_stm32f446xx.S
firmware/stm32-blinky/cmake/: components.cmake  files.cmake  flags.cmake  gcc-arm-none-eabi.cmake  target.cmake
